--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <title>Rock Paper Scissors Spock</title>
 </head>
 <body>
+    <header>
+
+    </header>
+    <main>
+        <div class="container">
+
+        </div>
+    </main>
+    <footer>
+        
+    </footer>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
