--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-
+        <h1 id="title">Rock Paper Scissors Lizard Spock</h1>
     </header>
     <main>
         <div class="container">
