--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="assets/css/style.css">
+    <link href="assets/css/style.css" rel="stylesheet">
     <title>Rock Paper Scissors Spock</title>
 </head>
 <body>
@@ -13,7 +13,15 @@
     </header>
     <main>
         <div class="container">
-
+            <div>
+                <p id="intro">Welcome to the Rock, Paper, Lizard Spock gaming site. Rock, Paper, Lizard Spock is a modern twist on the popular clasic game of Rock, Paper Scissors. In order to play, please enter your name below.</p>
+            </div>
+            <div id="user-input">
+            <label for="fname">Enter your name:</label>
+            <br>
+            <input id="fname" type="text">
+            <br>
+            <button type="button" id="submit-name">Submit</button> 
         </div>
     </main>
     <footer>
