Ass style to label

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <br>
             <input id="fname" type="text">
             <br>
-            <button type="button" id="submit-name">Submit</button> 
+            <button type="button" id="submit-name" class="btn">Play</button> 
         </div>
     </main>
     <footer>
