Add innerHTML to gameboard when play is clicked

--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
     </header>
     <main>
         <div class="container">
-            <div>
+            <div id="game-board"><div>
                 <p id="intro">Welcome to the Rock, Paper, Lizard Spock gaming site. Rock, Paper, Lizard Spock is a modern twist on the popular clasic game of Rock, Paper Scissors. In order to play, please enter your name below.</p>
             </div>
             <div id="user-input">
-            <label for="fname">Enter your name:</label>
-            <br>
-            <input id="fname" type="text">
-            <br>
-            <button type="button" id="submit-name" class="btn">Play</button> 
+                <label for="fname">Enter your name:</label>
+                <br>
+                <input id="fname" type="text">
+                <br>
+                <button type="button" id="submit-name" class="btn">Play</button> 
+            </div>
         </div>
     </main>
     <footer>
