Add user message in eventListner

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                 <br>
                 <input id="fname" type="text">
                 <br>
-                <button type="button" id="submit-name" class="btn">Play</button> 
+                <button type="button" id="submit-name" class="btn">Play</button>
+                <p id="message">Please enter your name above to play game.</p>
             </div>
         </div>
     </main>
