Add comments to index.html file

--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 </head>
 <body>
     <header>
+        <!-- Game title -->
         <h1 id="title">Rock Paper Scissors Lizard Spock</h1>
     </header>
     <main>
         <div class="container">
+            <!-- Game board where all innerHTML will be changed -->
             <div id="game-board"><div>
                 <p id="intro">Welcome to the Rock, Paper, Lizard Spock gaming site. Rock, Paper, Lizard Spock is a modern twist on the popular clasic game of Rock, Paper Scissors. In order to play, please enter your name below.</p>
             </div>
+            <!-- User input -->
             <div id="user-input">
                 <label for="fname">Enter your name:</label>
                 <br>
@@ -27,6 +30,7 @@
         </div>
     </main>
     <footer>
+        <!-- Social media links and copyright -->
         <ul class="social-networks">
             <li>
                 <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="visit us on facebook (opens a new tab)"><i class="fab fa-facebook-square"></i></a>
@@ -42,6 +46,7 @@
          <!-- font awesome script -->
     <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
     </footer>
+    <!-- Javascript link -->
     <script src="assets/js/script.js"></script>
 </body>
 </html>
