FIX: unclosed div in index.html

--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
         <h1 id="title">Rock Paper Scissors Lizard Spock</h1>
     </header>
     <main>
-        <div class="container">
-            <!-- Game board where all innerHTML will be changed -->
-            <div id="game-board"><div>
+        <!-- Game board where all innerHTML will be changed -->
+        <div id="game-board">
                 <p id="intro">Welcome to the Rock, Paper, Lizard Spock gaming site. Rock, Paper, Lizard Spock is a modern twist on the popular clasic game of Rock, Paper Scissors. In order to play, please enter your name below.</p>
-            </div>
             <!-- User input -->
             <div id="user-input">
                 <label for="fname">Enter your name:</label>
